<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--  Title Field  -->
    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/title"
            android:textSize="@dimen/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

<!--  Username Field  -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:hint="@string/username_entry"
            app:layout_constraintWidth_percent="0.7"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

<!--  Password Field  -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:hint="@string/password_entry"
            app:layout_constraintWidth_percent="0.7"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FF000000">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/radio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_prompt"
            android:textSize="@dimen/medium"
            android:layout_marginTop="@dimen/large"
            app:layout_constraintLeft_toRightOf="@id/radiogroup"
            app:layout_constraintStart_toStartOf="@+id/radiogroup"
            app:layout_constraintTop_toBottomOf="@id/password" />

    <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/second_radiobutton"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/radio_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

        <RadioButton
                android:id="@+id/first_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_small"
                android:textSize="@dimen/small"
                />

        <RadioButton
                android:id="@+id/second_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_medium"
                android:textSize="@dimen/medium"
                app:layout_constraintLeft_toRightOf="@id/first_radiobutton"
                />

        <RadioButton
                android:id="@+id/third_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_large"
                android:textSize="@dimen/large"
                />
    </RadioGroup>


    <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sanic"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/radiogroup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>
